Fix authentication overlay horizontal scroll problem

--- a/src/components/authentication-modal/AuthenticationModal.module.scss
+++ b/src/components/authentication-modal/AuthenticationModal.module.scss
@@ -1,6 +1,8 @@
 .overlay {
+  top: 0;
+  left: 0;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   position: absolute;
   background-color: rgba(255, 255, 255, 0.8);
 
